Indication of particles does not change even if I change Emit From of Particles system under the new dependence graph. #44881

Closed
opened 2015-05-29 05:26:40 +02:00 by perfection cat · 11 comments

System Information
windows XP/SP3 32bits

Blender Version
Broken: version 2.74 (sub 5), branch b'master', commit date b'2015-05-28' b'20:10', hash b'3511e2d', b'Release'
Worked: old dependence graph

Short description of error
Indication of particles does not change even if I change Emit From of Particles system under the new dependence graph.
Exact steps for others to reproduce the error
Run blender with enable-new-depsgraph argument.
Open an attached file.
Change 'Emit From' of Emission in particles system.
Indication of particle does not change.

blend file
EmitFrom.blend

**System Information** windows XP/SP3 32bits **Blender Version** Broken: version 2.74 (sub 5), branch b'master', commit date b'2015-05-28' b'20:10', hash b'3511e2d', b'Release' Worked: old dependence graph **Short description of error** Indication of particles does not change even if I change Emit From of Particles system under the new dependence graph. **Exact steps for others to reproduce the error** Run blender with enable-new-depsgraph argument. Open an attached file. Change 'Emit From' of Emission in particles system. Indication of particle does not change. blend file [EmitFrom.blend](https://archive.blender.org/developer/F181085/EmitFrom.blend)
Author

Changed status to: 'Open'

Changed status to: 'Open'
Author

Added subscriber: @sindra1961

Added subscriber: @sindra1961
Author

When the frame in the Timeline view is pushed forward, the indication of particles turns into it which is chosen in 'Emit From'.

When the frame in the Timeline view is pushed forward, the indication of particles turns into it which is chosen in 'Emit From'.

Added subscriber: @mont29

Added subscriber: @mont29

Confirmed, affects old depsgraph as well...

Confirmed, affects old depsgraph as well...

Added subscribers: @Sergey, @LukasTonne

Added subscribers: @Sergey, @LukasTonne
Member

Added subscriber: @Blendify

Added subscriber: @Blendify
Author

It may be the same reason that drawing does not change even if I change Seed.

It may be the same reason that drawing does not change even if I change Seed.

Changed status from 'Open' to: 'Archived'

Changed status from 'Open' to: 'Archived'
Sergey Sharybin self-assigned this 2015-08-28 18:32:38 +02:00

After commits a0a7d92 and 36c408d the issue should now be fixed.

After commits a0a7d92 and 36c408d the issue should now be fixed.
Author

Thanks, I confirmed it.

Thanks, I confirmed it.
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
4 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#44881
No description provided.