Partial fix of T44881: Fix for missing particles update when changing seed

Was only visible with new dependency graph.

Changing emit_from still doesn't behave fully reliably tho, that needs some
closer investigation.