source/blender/blenkernel/BKE_particle.h
@@ -464,6 +464,7 @@ typedef struct ParticleRenderData {
 struct EvaluationContext;
 
 void BKE_particle_system_eval(struct EvaluationContext *eval_ctx,
+                              struct Scene *scene,
                               struct Object *ob,
                               struct ParticleSystem *psys);
 
